--- a/WebApplication1/Areas/coadmin/Views/contratos/listado.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/contratos/listado.cshtml
@@ -60,6 +60,17 @@
         <!-- end back button -->
 
         <div class="row">
+            @if (ViewBag.msgError != null)
+            {
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            }
             <div class="col-12">
                 <div class="card m-b-30">
                     <div class="card-body">
@@ -126,14 +137,17 @@
                                             </td>
                                             <td class="text-center">
                                                 <a href="@Url.Action("editar", "contratos", new { area = "coadmin", contractID = item.id })">
-                                                    <button type="button" class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1" 
+                                                    <button type="button" class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
                                                             data-toggle="tooltip" data-placement="top" title="Editar">
-                                                    <i class="mdi mdi-lead-pencil"></i></button></a>
-                                          
+                                                        <i class="mdi mdi-lead-pencil"></i>
+                                                    </button>
+                                                </a>
+
                                                 <button type="button" onclick="onDeleteContract(this)" data-id="@item.id"
-                                                   class="btn btn-danger waves-effect waves-light btn-sm mb-1"
-                                                   data-toggle="tooltip" data-placement="top" 
-                                                   title="Eliminar"><i class="mdi mdi-delete"></i>
+                                                        class="btn btn-danger waves-effect waves-light btn-sm mb-1"
+                                                        data-toggle="tooltip" data-placement="top"
+                                                        title="Eliminar">
+                                                    <i class="mdi mdi-delete"></i>
                                                 </button>
                                             </td>
                                         </tr>
