--- a/WebApplication1/Areas/coadmin/Views/documentos/editarcategoria.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/documentos/editarcategoria.cshtml
@@ -27,6 +27,17 @@
         </div>
         <!-- end page title end breadcrumb -->
         <div class="row">
+            @if (ViewBag.msgError != null)
+            {
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            }
             <div class="col-12">
                 <div class="card">
                     @using (Html.BeginForm("editdocumenttype", "documentos", FormMethod.Post,
@@ -40,7 +51,7 @@
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="text" value="@Model.editDocumentType.type_name" required
+                                    <input  maxlength="30" class="form-control soloTexto" type="text" value="@Model.editDocumentType.type_name" required
                                            data-toggle="tooltip" title="Actualizar el nombre de la categoría"
                                            placeholder="Nombre" id="example-email-input" name="type_name">
                                     <small class="form-text text-muted">Actualizar el nombre de la categoría</small>
@@ -119,21 +130,25 @@
                                 <tbody>
                                     @foreach (var item in Model.documentTypeItemList)
                                     {
-                                        <tr>
-                                            <td>@item.DocumentTypeName</td>
-                                            <td class="text-center"><button type="button" class="btn btn-info waves-effect waves-light btn-sm">@item.Documents</button></td>
-                                            <td class="text-center">
-                                                @if (item.Share == 1)
-                                                {
-                                                    <button type="button" class="btn btn-warning waves-effect waves-light btn-sm mb-1">Administradores</button>
-                                                }
-                                                else
-                                                {
-                                                    <button type="button" class="btn btn-info waves-effect waves-light btn-sm mr-1 mb-1">General</button>
-                                                }
-                                            </td>
-                                            <td class="text-center"><a href="@Url.Action("editarcategoria", "documentos", new { area = "coadmin", typeID = item.ID })"><button type="button" class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1" data-toggle="tooltip" data-placement="top" title="Editar"><i class="mdi mdi-lead-pencil"></i></button></a><a href="#"><button type="button" onclick="onDeleteDocumentType(this)" data-id="@item.ID" class="btn btn-danger waves-effect waves-light btn-sm mb-1" data-toggle="tooltip" data-placement="top" title="Eliminar"><i class="mdi mdi-delete"></i></button></a></td>
-                                        </tr>
+                                    <tr>
+                                        <td>@item.DocumentTypeName</td>
+                                        <td class="text-center">
+                                            <a href="@Url.Action("listado", "documentos", new { area = "coadmin", idCategory = item.ID })">
+                                                <button type="button" class="btn btn-info waves-effect waves-light btn-sm">@item.Documents</button>
+                                            </a>
+                                        </td>
+                                        <td class="text-center">
+                                            @if (item.Share == 1)
+                                            {
+                                                <button type="button" class="btn btn-warning waves-effect waves-light btn-sm mb-1">Administradores</button>
+                                            }
+                                            else
+                                            {
+                                                <button type="button" class="btn btn-info waves-effect waves-light btn-sm mr-1 mb-1">General</button>
+                                            }
+                                        </td>
+                                        <td class="text-center"><a href="@Url.Action("editarcategoria", "documentos", new { area = "coadmin", typeID = item.ID })"><button type="button" class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1" data-toggle="tooltip" data-placement="top" title="Editar"><i class="mdi mdi-lead-pencil"></i></button></a><a href="#"><button type="button" onclick="onDeleteDocumentType(this)" data-id="@item.ID" class="btn btn-danger waves-effect waves-light btn-sm mb-1" data-toggle="tooltip" data-placement="top" title="Eliminar"><i class="mdi mdi-delete"></i></button></a></td>
+                                    </tr>
                                     }
                                 </tbody>
                             </table>
